# take5

./: Cargo.toml  README.md
src/: board.rs  card.rs  configuration.rs  game.rs  lib.rs  stack.rs
src/dealer/: mod.rs  standard_dealer.rs
src/player/: ai_player.rs  mod.rs
take5-cli/: Cargo.toml  bull.conf  take6.conf
take5-cli/src/: args.rs  main.rs
take5-ext/: Cargo.toml
take5-ext/src/: custom_dealer.rs  lib.rs  stdin_player.rs
take5-remote/: Cargo.toml
take5-remote/src/: client.rs  error.rs  game_state.rs  iter.rs  lib.rs  player_proxy.rs
take5-remote/src/message/: de.rs  mod.rs  ser.rs
take5-remote/src/starting_hand/: de.rs  err.rs  mod.rs
take5-remote/src/wrapper/: board.rs  card.rs  mod.rs  stack.rs
test/: 1-in.json  2-in.json  2-out.json  3-in.json  3-out.json  4-in.json  4-out.json  5-in.json  5-out.json
