[package]
name = "take5"
version = "0.2.0"
authors = [
    "Nathan Lilienthal <nathan@nixpulvis.com>",
    "Alex Jo <jo.al@husky.neu.edu>",
]

[workspace]
members = ["take5-cli", "take5-ext", "take5-remote"]

[dependencies]
itertools = "0.4"
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
